--- a/ThienNga2/Views/Inventory/Inventory.cshtml
+++ b/ThienNga2/Views/Inventory/Inventory.cshtml
@@ -155,7 +155,7 @@
                     <p>Name: @t.productName</p>
                     <p>Factory Code: @t.producFactoryID</p>
                     <p>Store Code: @t.productStoreID</p>
-                    <p>Số luong: @t.price VND</p>
+                    <p>Giá: @t.price VND</p>
                 </td>
 
 
