--- a/ThienNga2/Views/Inventory/Inventory.cshtml
+++ b/ThienNga2/Views/Inventory/Inventory.cshtml
@@ -104,7 +104,7 @@
                     @using (Html.BeginForm("SearchGetAll", "Inventory"))
                     {
                         <div style="display:none"> <input name="idd" value="@name.id"/> </div>
-                        <div id="form" class="form-wrapper">      <button type="submit" value="Search" id="submit2">Duyệt kho @name.InventoryName  </button></div>
+                        <div id="form" class="form-wrapper">      <button type="submit" value="Search" id="submit2">Duyệt @name.InventoryName  </button></div>
                     }
                 </td>
 
