--- a/ThienNga2/Views/Inventory/Inventory.cshtml
+++ b/ThienNga2/Views/Inventory/Inventory.cshtml
@@ -178,7 +178,7 @@
                         {
                             ls.Add(new SelectListItem { Text = item.tb_inventory_name.InventoryName + "" , Value = item.id+"" });
                         }
-            <h1> Sản phẩm đang có tại: </h1>
+            <h1> Số lượng tại các kho:</h1>
             <table class="responstable" border="1">
                 <tr>
                     <th> Tên Kho </th>
