--- a/ThienNga2/Content/SearchBar.css
+++ b/ThienNga2/Content/SearchBar.css
@@ -21,6 +21,28 @@
 	padding: 8px;
 	width: 450px;
 }
+.form-wrapper2 {
+	background-color: #f6f6f6;
+	background-image: -webkit-gradient(linear, left top, left bottom, from(#f6f6f6), to(#eae8e8));
+	background-image: -webkit-linear-gradient(top, #f6f6f6, #eae8e8);
+	background-image: -moz-linear-gradient(top, #f6f6f6, #eae8e8);
+	background-image: -ms-linear-gradient(top, #f6f6f6, #eae8e8);
+	background-image: -o-linear-gradient(top, #f6f6f6, #eae8e8);
+	background-image: linear-gradient(top, #f6f6f6, #eae8e8);
+	border-color: #dedede #bababa #aaa #bababa;
+	border-style: solid;
+	border-width: 1px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444;
+	-moz-box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444;
+	box-shadow: 0 3px 3px rgba(255,255,255,.1), 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 5px #444;
+	margin: 20px auto;
+	overflow: hidden;
+	padding: 8px;
+	width: 150px;
+}
 
 .form-wrapper #search {
      font: 12px Lucida sans, Arial, Helvetica, sans-serif;
@@ -130,7 +152,7 @@
 	height: 42px;
 	float: right;
 
-	padding: 0;
+	padding: 10px;
 	text-transform: uppercase;
 	text-shadow: 0 1px 0 rgba(0, 0 ,0, .3);
 	width: 100%;
