--- a/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
+++ b/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
@@ -249,7 +249,7 @@
                         {
                             <tr>
                                 <td>
-                                    <input type="hidden" name="activitiesID" value="@item.itemID" />
+                                    <input type="hidden" name="activitiesID" value="@item.id" />
                                     <input id="searchID" type="text" name="ksu" />
                                 </td>
                                 <td>
@@ -297,7 +297,7 @@
                         {
                             <tr>
                                 <td>
-                                    <input type="hidden" name="activitiesID" value="@item.itemID" />
+                                    <input type="hidden" name="activitiesID" value="@item.id" />
                                     <input type="text" name="fixDetail" />
                                 </td>
                                 <td>
