--- a/ThienNga2/Views/Shared/_Layout.cshtml
+++ b/ThienNga2/Views/Shared/_Layout.cshtml
@@ -44,6 +44,14 @@
                     else
                     {
                         <li > @Html.ActionLink("Bán", "", "ProductItem")</li> }
+                    @if (Request.RawUrl.Contains("KickHoatBaoHanh"))
+                    {
+                        <li style="background-color:#022F5A"> @Html.ActionLink("Kích hoạt bảo hành", "", "KickHoatBaoHanh")</li>
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Kích hoạt bảo hành", "", "KickHoatBaoHanh")</li>
+                    }
                     @if (Request.RawUrl.Contains("CreateWarranty"))
                     {
                         <li style="background-color:#022F5A"> @Html.ActionLink("Tạo hóa đơn bảo hành", "", "CreateWarranty")</li>
