--- a/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
+++ b/ThienNga2/Views/Warranty/WarrantyCheck.cshtml
@@ -88,16 +88,31 @@
                 {
    
             <div id="form" class="form-wrapper">
-                <input id="search" class="suggestionsinput" name="code" type="text" placeholder="Nhập mã hóa đơn/mã sản phẩm " required />
-                <select name="searchType" class="suggestionsinput">
-                    <option value="warrantyCODE"> Mã hóa đơn bảo hành</option>
-                    <option value="item">Mã sản phẩm</option>
-                    <option value="warrantyIMEI"> Mã bảo hành</option>
-                    <option value="warrantyCODEDate">Ngày tháng</option>
-                    <option value="warrantyCODEPhone">Số điện thoại</option>
+                <table>
+                    <tr>
+                        <td>
+                            <input id="search" class="suggestionsinput" name="code" type="text" placeholder="Nhập mã hóa đơn/mã sản phẩm " required />
+                        </td>
+                        <td>
+                            <button type="submit" value="Search" id="submit">Tìm  </button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <br />Tìm theo
+                            <select name="searchType" class="service-small ">
+                                <option value="warrantyCODE" class="txtsearch"> Mã hóa đơn bảo hành</option>
+                                <option value="item">Mã sản phẩm</option>
+                                <option value="warrantyIMEI"> Mã bảo hành</option>
+                                <option value="warrantyCODEDate">Ngày tháng</option>
+                                <option value="warrantyCODEPhone">Số điện thoại</option>
 
-                </select>
-                <button type="submit" value="Search" id="submit">Tìm  </button>
+                            </select>
+                        </td>
+                    </tr>
+                </table>
+       
+
             </div>
 
 
@@ -154,7 +169,7 @@
 
   };
 
-                    <h1> Quản lý quy trình bảo hành của mã bảo hành : @item.CodeBaoHanh</h1>
+                    <H1> Quản lý quy trình bảo hành của mã bảo hành : @item.CodeBaoHanh</H1>
                     using (Html.BeginForm("Update", "Warranty"))
                     {
 
