fix cái confirrrrrrm chết tiệt
shit

--- a/ThienNga2/Views/ProductItem/ConfirmNewProductItem.cshtml
+++ b/ThienNga2/Views/ProductItem/ConfirmNewProductItem.cshtml
@@ -78,7 +78,7 @@
                         }
                     </td>
                     <td>
-                        @using (Html.BeginForm("Confirrm", "ProductItem"))
+                        @using (Html.BeginForm("Confirm", "ProductItem"))
                         {
 
                             <button type="submit" name="Edit" value="Hoàn tất" >Hoàn tất</button>
