--- a/ThienNga2/Views/CreateWarranty/ConfirmCreate.cshtml
+++ b/ThienNga2/Views/CreateWarranty/ConfirmCreate.cshtml
@@ -77,7 +77,7 @@
                             }
                         </td>
                         <td>
-                            @using (Html.BeginForm("Confirrm", "CreateWarranty"))
+                            @using (Html.BeginForm("Confirm", "CreateWarranty"))
                             {
                                 <input type="hidden" value="@act.id" name="actid" />
                                 <button type="submit" name="Edit" value="Hoàn tất" > Hoàn tất</button>
